--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 .app__wrapper {
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
   align-items: center;
   padding: 4rem;
 
@@ -70,11 +71,7 @@
 }
 
 @media screen and (min-width: 2000px) {
-  .app__button {
-    font-size: 37px;
-    line-height: 60px;
-  }
-
+  .app__button,
   .app__text {
     font-size: 30px;
     line-height: 50px;
@@ -97,12 +94,14 @@
   .app__wrapper {
     padding: 4rem 2rem;
   }
+  .app__button,
   .app__text {
     font-size: 14px;
   }
 }
 
 @media screen and (max-width: 450px) {
+  .app__button,
   .app__text {
     font-size: 12px;
   }
