--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -1,10 +1,7 @@
-.app__wrapper_info {
-  flex: 1;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-direction: column;
+.app__list {
+  font-family: var(--font-base);
+  text-transform: uppercase;
+  color: var(--color-white);
 }
 
 .app__header-h1 {
@@ -14,21 +11,6 @@
   text-transform: uppercase;
   line-height: 117px;
   font-size: 70px;
-}
-
-.app__wrapper_img {
-  flex: 1;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  margin-left: 2rem;
-}
-
-.app__wrapper_img img {
-  width: 80%;
-  border-radius: 50px 0;
 }
 
 @media screen and (min-width: 2000px) {
@@ -41,12 +23,6 @@
 @media screen and (max-width: 1150px) {
   .app__header-h1 {
     font-size: 70px;
-  }
-  .app__wrapper_img {
-    margin: 5rem 0 0 0;
-  }
-  .app__wrapper_img img {
-    width: 100%;
   }
 }
 
