--- a/src/pages/Gallery/Gallery.css
+++ b/src/pages/Gallery/Gallery.css
@@ -6,12 +6,18 @@
   padding: 4rem 4em;
 }
 
+.app__goback {
+  align-self: flex-start;
+}
+
 .app__gallery-images {
   flex: 1;
   display: flex;
   flex-direction: row;
   max-width: 100%;
   position: relative;
+
+  margin: 2rem 0;
 }
 
 .app__gallery-images_container {
@@ -71,7 +77,7 @@
 }
 
 .gallery__arrow-icon {
-  color: var(--color-golden);
+  color: var(--color-white);
   font-size: 2rem;
   cursor: pointer;
   background-color: var(--color-black);
@@ -93,10 +99,8 @@
   .app__gallery {
     flex-direction: column;
   }
-
   .app__gallery-images {
     max-width: 100%;
-    margin: 5rem 0;
   }
 }
 
