--- a/src/components/Login_Register/Login_Register.css
+++ b/src/components/Login_Register/Login_Register.css
@@ -55,13 +55,17 @@ input {
   border-bottom: solid rgb(143, 143, 143) 1px;
   font-family: var(--font-base);
 
-  margin: 0 auto 30px 10px;
+  margin: 0 auto 30px 2px;
 
   background: none;
   color: var(--color-gray);
 
   height: 35px;
   width: 300px;
+}
+
+form {
+    padding: 1rem 0;
 }
 
 @media screen and (min-width: 2000px) {
